# BrainrotLLMs

./: .gitignore  LICENSE  README.md  analysis.py  config_judge.yaml  config_steering.yaml  diagnose_steering.py  generate_condor_judge.py  generate_condor_steering.py  judge.py  make_examples.py  plot_results.py  probe_brainrot_knowledge.py  pyproject.toml  run_judge.sh  steering_experiment.py  sync.err  sync.htc  sync.sh  validate_judge.py
steering_logs/: job_926799_0.err  job_926799_0.out  job_926799_1.err  job_926799_1.out  job_926799_10.err  job_926799_11.err  job_926799_12.err  job_926799_13.err  job_926799_14.err  job_926799_15.err  job_926799_15.out  job_926799_16.err  job_926799_16.out  job_926799_17.err  job_926799_18.err  job_926799_19.err  job_926799_19.out  job_926799_2.err  job_926799_2.out  job_926799_20.err  job_926799_20.out  job_926799_21.err  job_926799_22.err  job_926799_22.out  job_926799_23.err  job_926799_23.out  job_926799_24.err  job_926799_24.out  job_926799_25.err  job_926799_25.out  job_926799_26.err  job_926799_3.err  job_926799_3.out  job_926799_4.err  job_926799_4.out  job_926799_5.err  job_926799_5.out  job_926799_6.err  job_926799_6.out  job_926799_7.err  (+379 more)
steering_results/: Llama-3.1-8B-Instruct_aas_L25.csv  Llama-3.1-8B-Instruct_aas_L25_dual_judged.csv  Llama-3.1-8B-Instruct_aas_L25_judged.csv  Llama-3.1-8B-Instruct_aas_L50.csv  Llama-3.1-8B-Instruct_aas_L50_dual_judged.csv  Llama-3.1-8B-Instruct_aas_L50_judged.csv  Llama-3.1-8B-Instruct_aas_L75.csv  Llama-3.1-8B-Instruct_aas_L75_dual_judged.csv  Llama-3.1-8B-Instruct_aas_L75_judged.csv  (+72 more)
(+7 files in other folders)
