[project]
name = "brainrot"
version = "0.1.0"
description = "Activation Steering for Brainrot Language Style"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.0.0",
    "datasets>=3.0.0",
    "numpy>=2.0.0",
    "pillow>=12.2.0",
    "scikit-learn>=1.6.0",
    "torch>=2.5.0",
    "tqdm>=4.67.0",
    "transformers>=4.47.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
